tests/snapshots/schema_snapshots__backend_identity_schema.snap
---
source: tests/schema_snapshots.rs
expression: schema
---
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "title": "BackendIdentity",
  "description": "Identifies a backend and its version information.\n\n# Examples\n\n```\nuse abp_core::BackendIdentity;\n\nlet id = BackendIdentity {\n    id: \"sidecar:node\".into(),\n    backend_version: Some(\"1.0.0\".into()),\n    adapter_version: None,\n};\nassert_eq!(id.id, \"sidecar:node\");\n```",
  "type": "object",
  "properties": {
    "adapter_version": {
      "description": "Adapter version (your sidecar wrapper version).",
      "type": [
        "string",
        "null"
      ]
    },
    "backend_version": {
      "description": "Backend runtime version (SDK version, CLI version, etc.).",
      "type": [
        "string",
        "null"
      ]
    },
    "id": {
      "description": "Stable backend identifier (e.g. `\"mock\"`, `\"sidecar:node\"`).",
      "type": "string"
    }
  },
  "required": [
    "id"
  ]
}
